fix(RHINENG-13857): Make tags aligned with table header

--- a/src/components/InventoryTable/InventoryList.scss
+++ b/src/components/InventoryTable/InventoryList.scss
@@ -94,6 +94,10 @@
 
     .ins-c-inventory__list-tags {
         display: inline-block;
+        
+        .pf-v5-c-button {
+            padding-left: 0;
+        }
     }
 
     .ins-composed-col div {
